--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -39,6 +39,7 @@ select {
   width: 100%;
   padding: 1em;
   line-height: 1.4;
+  cursor: pointer;
   background-color: #f9f9f9;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
