--- a/src/assets/sass/light-bootstrap-dashboard.css
+++ b/src/assets/sass/light-bootstrap-dashboard.css
@@ -1,20 +1,3 @@
-/*!
-
- =========================================================
- * Light Bootstrap Dashboard React - v1.1.0
- * Based on Light Bootstrap Dashboard - v1.3.0
- =========================================================
-
- * Product Page: http://www.creative-tim.com/product/light-bootstrap-dashboard-react
- * Copyright 2017 Creative Tim (http://www.creative-tim.com)
- * Licensed under MIT (https://github.com/creativetimofficial/light-bootstrap-dashboard-react/blob/master/LICENSE.md)
-
- =========================================================
-
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
- */
-/*      light colors         */
 @keyframes spin {
   from {
     transform: rotate(0deg); }
@@ -273,12 +256,13 @@ input:focus {
     .sidebar .nav li.open > a,
     .sidebar .nav li.open > a:focus,
     .sidebar .nav li.open > a:hover {
+      /* for active nav */
       background: rgba(255, 255, 255, 0.13);
       opacity: 1; }
     .sidebar .nav li.active > a {
-      color: #FFFFFF;
+      color: rgb(255, 255, 255);
       opacity: 1;
-      background: rgba(60, 240, 5, 0.637); }
+      background: rgba(0, 255, 0, 0.651); }
     .sidebar .nav p {
       margin: 0;
       line-height: 30px;
@@ -347,7 +331,7 @@ body > .navbar-collapse:before {
 
 .sidebar:before,
 body > .navbar-collapse:before {
-  opacity: .05;
+  opacity: .08;
   background: #000000; }
 
 .sidebar:after,
@@ -1354,7 +1338,7 @@ body > .navbar-collapse[data-color="purple"]:after {
     padding: 8px 16px; }
   .navbar .navbar-nav > li > a.btn-round {
     margin: 16px 3px; }
-  .navbar .navbar-nav > li > a [class^="fa"] {
+  .navbar .navbar-nav > li > a [class="fa"] {
     font-size: 19px;
     position: relative;
     line-height: 16px;
