--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -251,6 +251,7 @@ table.dataTable td {
    */
 .dataTables_wrapper {
   position: relative;
+  padding-right:20px; 
   clear: both;
   *zoom: 1;
   zoom: 1; }
