--- a/src/assets/sass/dashboardEdit.css
+++ b/src/assets/sass/dashboardEdit.css
@@ -1,9 +1,6 @@
  /*     General overwrite     */
   .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
+    display: block;
     width: 260px;
     display: block;
     z-index: 1;
@@ -29,23 +26,8 @@
         color: rgb(255, 255, 255);
         opacity: 1;
         background: rgba(0, 255, 0, 0.651); }
-      .sidebar .nav p {
-        margin: 0;
-        line-height: 30px;
-        font-size: 12px;
-        font-weight: 600;
-        text-transform: uppercase; }
-      .sidebar .nav .caret {
-        top: 24px;
-        position: absolute;
-        right: 15px; }
-      .sidebar .nav i {
-        font-size: 28px;
-        float: left;
-        margin-right: 15px;
-        line-height: 30px;
-        width: 30px;
-        text-align: center; }
+
+    
 
   .sidebar:after, .sidebar:before,
   body > .navbar-collapse:after,
@@ -87,14 +69,31 @@
     background-image: url("../img/Tokopedia-SEO.jpg");
     background-size: cover;
     background-position: center; 
-    position: relative;
     float: right;
-    width: calc(100% - 260px); }
-    .main-panel > .content {
-      padding: 30px 15px;
-      min-height: calc(100% - 123px); }
-    .main-panel > .footer {
-      border-top: 1px solid #e7e7e7; }
-    .main-panel .navbar {
-      margin-bottom: 0; }
+  }
   
+  .card .ct-chart {
+    margin: 30px 0 30px;
+    height: 325px; }
+
+    @media only screen and (max-width:1100px){
+      .card .ct-chart {
+        margin: 30px 0 30px;
+        height: 225px; }
+    }
+    @media only screen and (max-width:990px){
+      .card .ct-chart {
+        margin: 30px 0 30px;
+        height: 625px; }
+    }
+    @media only screen and (max-width:750px){
+      .card .ct-chart {
+        margin: 30px 0 30px;
+        height: 425px; }
+    }
+    @media only screen and (max-width:550px){
+      .card .ct-chart {
+        margin: 30px 0 30px;
+        height: 285px; }
+    }
+
