--- a/src/assets/sass/dashboardEdit.css
+++ b/src/assets/sass/dashboardEdit.css
@@ -147,5 +147,24 @@
     float: right;
     width: 100px;
     margin-top: 45px;
-  
   }
+
+  .navbar-default {
+    background-color: rgba(255, 255, 255, 0.96);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+    .navbar-default .navbar-nav > li > a:not(.btn) {
+      color: #9A9A9A; }
+    .navbar-default .navbar-nav > .active > a,
+    .navbar-default .navbar-nav > .active > a:not(.btn):hover,
+    .navbar-default .navbar-nav > .active > a:not(.btn):focus,
+    .navbar-default .navbar-nav > li > a:not(.btn):hover,
+    .navbar-default .navbar-nav > li > a:not(.btn):focus {
+      background-color: transparent;
+      border-radius: 3px;
+      color: #7ed321;
+      opacity: 1;
+      filter: alpha(opacity=100); }
+      .navbar-default .navbar-nav > .dropdown > a:hover .caret,
+      .navbar-default .navbar-nav > .dropdown > a:focus .caret {
+        border-bottom-color: #7ed321;
+        border-top-color: #7ed321; }
