--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,33 +7,33 @@
 body {
   background-image: url("../img/Tokopedia-SEO.jpg");
   background-size: cover;
-  background-position: center; 
+  background-position: center;
 }
 
-#logo1{
+#logo1 {
   text-align: center;
-
-  
 }
 
 h5 {
   color: #ff0019;
 }
-pRegist{
+
+pRegist {
   color: #000;
   padding-bottom: 8px;
 }
-h4,h1 {
+
+h4,
+h1 {
   color: #7ed321;
   font-weight: bold;
-  font-size:30px;
+  font-size: 30px;
   text-align: center;
 }
 
-
 input,
-input[type="radio"] + label,
-input[type="checkbox"] + label:before,
+input[type="radio"]+label,
+input[type="checkbox"]+label:before,
 select option,
 select {
   width: 100%;
@@ -48,21 +48,26 @@ select {
   transition: 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
 }
+
 input:focus {
   outline: 0;
   border-color: #64ac15;
 }
-input:focus + .input-icon i {
+
+input:focus+.input-icon i {
   color: #7ed321;
 }
-input:focus + .input-icon:after {
+
+input:focus+.input-icon:after {
   border-right-color: #7ed321;
 }
+
 input[type="radio"] {
   display: none;
-  padding:20px;
+  padding: 20px;
 }
-input[type="radio"] + label,
+
+input[type="radio"]+label,
 select {
   display: inline-block;
   width: 50%;
@@ -70,34 +75,41 @@ select {
   float: left;
   border-radius: 0;
 }
-input[type="radio"] + label:first-of-type {
+
+input[type="radio"]+label:first-of-type {
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
 }
-input[type="radio"] + label:last-of-type {
+
+input[type="radio"]+label:last-of-type {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
-input[type="radio"] + label i {
+
+input[type="radio"]+label i {
   padding-right: 0.4em;
 }
-input[type="radio"]:checked + label,
-input:checked + label:before,
+
+input[type="radio"]:checked+label,
+input:checked+label:before,
 select:focus,
 select:active {
   background-color: #7ed321;
   color: #fff;
   border-color: #64ac15;
 }
+
 /* input[type="checkbox"] {
   display: none;
 } */
-input[type="checkbox"] + label {
+
+input[type="checkbox"]+label {
   position: relative;
   display: block;
   padding-left: 1.6em;
 }
-input[type="checkbox"] + label:before {
+
+input[type="checkbox"]+label:before {
   position: absolute;
   top: 0.2em;
   left: 0;
@@ -107,7 +119,8 @@ input[type="checkbox"] + label:before {
   padding: 0;
   content: "";
 }
-input[type="checkbox"] + label:after {
+
+input[type="checkbox"]+label:after {
   position: absolute;
   top: 0.45em;
   left: 0.2em;
@@ -117,51 +130,62 @@ input[type="checkbox"] + label:after {
   font-family: FontAwesome;
   content: "\f00c";
 }
-input:checked + label:after {
+
+input:checked+label:after {
   opacity: 1;
 }
+
 select {
   height: 3.4em;
   line-height: 2;
 }
+
 select:first-of-type {
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
 }
+
 select:last-of-type {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
+
 select:focus,
 select:active {
   outline: 0;
 }
+
 select option {
   background-color: #7ed321;
   color: #fff;
 }
+
 .input-group {
   margin-bottom: 1em;
   zoom: 1;
 }
+
 .input-group:before,
 .input-group:after {
   content: "";
   display: table;
 }
+
 .input-group:after {
   clear: both;
 }
+
 .input-group-icon {
   position: relative;
- justify-content: center;
- left: 50px;
+  justify-content: center;
+  left: 50px;
 }
+
 .input-group-icon input {
   padding-left: 4.4em;
   width: 547px;
-  
 }
+
 .input-group-icon .input-icon {
   position: absolute;
   top: 0;
@@ -172,6 +196,7 @@ select option {
   text-align: center;
   pointer-events: none;
 }
+
 .input-group-icon .input-icon:after {
   position: absolute;
   top: 0.6em;
@@ -186,6 +211,7 @@ select option {
   transition: 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
 }
+
 .input-group-icon .input-icon i {
   -webkit-transition: 0.35s ease-in-out;
   -moz-transition: 0.35s ease-in-out;
@@ -193,15 +219,17 @@ select option {
   transition: 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
 }
+
 .containerRegist {
   max-width: 50em;
   padding: 2em 3em 2em 3em;
   margin: 0em auto;
-  margin-bottom:3em; 
+  margin-bottom: 3em;
   background-color: #fff;
   border-radius: 4.2px;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
 }
+
 .row {
   zoom: 1;
 }
@@ -211,46 +239,51 @@ select option {
   content: "";
   display: table;
 }
+
 .row:after {
   clear: both;
 }
+
 .col-half {
   padding-right: 10px;
   float: left;
   width: 50%;
 }
+
 .col-half:last-of-type {
   padding-right: 0;
 }
+
 .col-third {
   padding-right: 10px;
   float: left;
   width: 33.33333333%;
 }
+
 .col-third:last-of-type {
   padding-right: 0;
 }
 
-.btn{
-  padding:15px;
+.btn {
+  padding: 15px;
   color: #fff;
   font-weight: bold;
   background-color: #7ed321;
   float: right;
   width: 30%;
   margin-top: 45px;
-
 }
 
-label{
+label {
   color: #424242;
-
 }
-#page{
+
+#page {
   margin-top: 65px;
   float: left;
   color: #756e6e;
 }
+
 @media only screen and (max-width: 540px) {
   .col-half {
     width: 100%;
@@ -258,15 +291,13 @@ label{
   }
 }
 
-
-#page4lbl{
+#page4lbl {
   position: relative;
-   width: 560px;
-   font-size: 16px;
-  
+  width: 560px;
+  font-size: 16px;
 }
 
-#validate{
+#validate {
   color: #ff0019;
   text-align: center;
 }
@@ -284,70 +315,77 @@ input:checked {
   background: #7ed321;
 } */
 
-
 /* The container */
+
 .checkB {
-    display: block;
-    position: relative;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  display: block;
+  position: relative;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* Hide the browser's default checkbox */
+
 .checkB input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
 }
 
 /* Create a custom checkbox */
+
 .checkmark {
-    position: absolute;
-    top: 0;
-    left: -30px;
-    height: 23px;
-    width: 23px;
-    background-color: #eee;
+  position: absolute;
+  top: 0;
+  left: -30px;
+  height: 23px;
+  width: 23px;
+  background-color: #eee;
 }
 
 /* On mouse-over, add a grey background color */
-.checkB:hover input ~ .checkmark {
-    background-color: #ccc;
+
+.checkB:hover input~.checkmark {
+  background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.checkB input:checked ~ .checkmark {
-    background-color: #7ed321;
+
+.checkB input:checked~.checkmark {
+  background-color: #7ed321;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
+  content: "";
+  position: absolute;
+  display: none;
 }
 
 /* Show the checkmark when checked */
-.checkB input:checked ~ .checkmark:after {
-    display: block;
+
+.checkB input:checked~.checkmark:after {
+  display: block;
 }
 
 /* Style the checkmark/indicator */
+
 .checkB .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .row1 {
@@ -359,73 +397,83 @@ input:checked {
   content: "";
   display: table;
 }
+
 .row1:after {
   clear: both;
 }
 
-
-#example{
-  text-Align:center;
-   color:#0b7a0c;
+#example {
+  text-Align: center;
+  color: #0b7a0c;
 }
 
-#selectCur{
+#selectCur {
   cursor: pointer;
 }
 
-#interviewFirst{
-
+#interviewFirst {
   cursor: pointer;
   width: 320px;
-  padding-top:20px;
-  padding-bottom:20px; 
-   
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-#interview{
+
+#interview {
   position: relative;
   left: 150px;
 }
-#interviewCard{
-text-align: center;
-padding-top: 30px;
-padding-bottom: 30px;
 
+#interviewCard {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
-#emailWelcome{
+#emailWelcome {
   position: relative;
   left: 55px;
-  padding-top:20px; 
+  padding-top: 20px;
 }
 
-
-#navitem{
+#navitem {
   width: 100px;
 }
-#navItemQ{
+
+#navItemQ {
   width: 140px;
 }
-#navbarYear{
+
+#navbarYear {
   position: relative;
   bottom: 13px;
   font-size: 13.5px;
   width: 90px;
   height: 45px;
 }
-#navbarType{
+
+#navbarType {
   position: relative;
   bottom: 13px;
   font-size: 13.5px;
   width: 95px;
-
 }
-#navbarQ{
+
+#navbarQ {
   position: relative;
   bottom: 13px;
   font-size: 13.5px;
   width: 128px;
 }
-#navbutton{
+
+#navbarM {
+  position: relative;
+  bottom: 13px;
+  font-size: 13.5px;
+  width: 70px;
+}
+
+
+#navbutton {
   display: inline-block;
   padding: 0px;
   width: 60px;
@@ -435,14 +483,26 @@ padding-bottom: 30px;
   border-radius: 3px;
   color: white;
   font-weight: bold;
-  background-color:#7fd31f;
+  background-color: #7fd31f;
   border-color: rgb(212, 212, 212);
 }
 
-#navbutton:hover{
-  background-color:transparent;
-  color: #b1b1b1;
+#phone::-webkit-inner-spin-button,
+#phone::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
+#colon {
+  position: relative;
+  top: 8px;
+  right: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
 
+#navbutton:hover {
+  background-color: transparent;
+  color: #b1b1b1;
+}
 
