--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -14,6 +14,8 @@ table.dataTable {
      * Body styles
      */ }
 
+
+
 table.dataTable thead th,
 table.dataTable tfoot th {
   font-weight: bold; }
@@ -46,7 +48,7 @@ table.dataTable tbody tr {
   background-color: white; }
 
 table.dataTable tbody tr.selected {
-  background-color: #0055ff; }
+  background-color: #76FF03; }
 
 table.dataTable tbody th,
 table.dataTable tbody td {
@@ -76,13 +78,13 @@ table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
   background-color: #f9f9f9; }
 
 table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
-  background-color: #0053f9; }
+  background-color: #42b549; }
 
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
-  background-color: #7ed321; }
+  background-color: rgba(0, 255, 0, 0.651); }
 
 table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
-  background-color: #0051f5; }
+  background-color: #42b549; }
 
 table.dataTable.order-column tbody tr > .sorting_1,
 table.dataTable.order-column tbody tr > .sorting_2,
@@ -108,13 +110,13 @@ table.dataTable.display tbody tr.odd > .sorting_3, table.dataTable.order-column.
   background-color: whitesmoke; }
 
 table.dataTable.display tbody tr.odd.selected > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_1 {
-  background-color: #0050f1; }
+  background-color: #E8F5E9; }
 
 table.dataTable.display tbody tr.odd.selected > .sorting_2, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_2 {
-  background-color: #0051f3; }
+  background-color: #E8F5E9; }
 
 table.dataTable.display tbody tr.odd.selected > .sorting_3, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_3 {
-  background-color: #0051f5; }
+  background-color: #E8F5E9; }
 
 table.dataTable.display tbody tr.even > .sorting_1, table.dataTable.order-column.stripe tbody tr.even > .sorting_1 {
   background-color: #f9f9f9; }
@@ -126,13 +128,13 @@ table.dataTable.display tbody tr.even > .sorting_3, table.dataTable.order-column
   background-color: #fdfdfd; }
 
 table.dataTable.display tbody tr.even.selected > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_1 {
-  background-color: #0053f9; }
+  background-color: #CCFF90; }
 
 table.dataTable.display tbody tr.even.selected > .sorting_2, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_2 {
-  background-color: #0053fb; }
+  background-color: #CCFF90; }
 
 table.dataTable.display tbody tr.even.selected > .sorting_3, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_3 {
-  background-color: #0054fd; }
+  background-color: #CCFF90; }
 
 table.dataTable.display tbody tr:hover > .sorting_1, table.dataTable.order-column.hover tbody tr:hover > .sorting_1 {
   background-color: #eaeaea; }
@@ -144,13 +146,13 @@ table.dataTable.display tbody tr:hover > .sorting_3, table.dataTable.order-colum
   background-color: #eeeeee; }
 
 table.dataTable.display tbody tr:hover.selected > .sorting_1, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_1 {
-  background-color: #004eea; }
+  background-color: #A5D6A7; }
 
 table.dataTable.display tbody tr:hover.selected > .sorting_2, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_2 {
-  background-color: #004eeb; }
+  background-color: #A5D6A7; }
 
 table.dataTable.display tbody tr:hover.selected > .sorting_3, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_3 {
-  background-color: #004fee; }
+  background-color: #A5D6A7; }
 
 table.dataTable.no-footer {
   border-bottom: 1px solid #111111; }
@@ -294,17 +296,17 @@ table.dataTable td {
   color: black !important;
   border: 1px solid #375c0e;
   background-color: #c3ee94;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #c3ee94), color-stop(100%, #7ed321));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #c3ee94), color-stop(100%, #A5D6A7));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #c3ee94 0%, #7ed321 100%);
+  background: -webkit-linear-gradient(top, #c3ee94 0%, #42b549 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -moz-linear-gradient(top, #c3ee94 0%, #7ed321 100%);
+  background: -moz-linear-gradient(top, #c3ee94 0%, #42b549 100%);
   /* FF3.6+ */
-  background: -ms-linear-gradient(top, #c3ee94 0%, #7ed321 100%);
+  background: -ms-linear-gradient(top, #c3ee94 0%, #42b549 100%);
   /* IE10+ */
-  background: -o-linear-gradient(top, #c3ee94 0%, #7ed321 100%);
+  background: -o-linear-gradient(top, #c3ee94 0%, #42b549 100%);
   /* Opera 11.10+ */
-  background: linear-gradient(to bottom, #c3ee94 0%, #7ed321 100%);
+  background: linear-gradient(to bottom, #c3ee94 0%, #42b549 100%);
   /* W3C */ }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
@@ -409,6 +411,7 @@ table.dataTable td {
   clear: both;
   height: 0; }
 
+
 @media screen and (max-width: 767px) {
   .dataTables_wrapper .dataTables_info,
   .dataTables_wrapper .dataTables_paginate {
@@ -417,6 +420,8 @@ table.dataTable td {
   .dataTables_wrapper .dataTables_paginate {
     margin-top: 0.5em; } }
 
+    
+
 @media screen and (max-width: 640px) {
   .dataTables_wrapper .dataTables_length,
   .dataTables_wrapper .dataTables_filter {
@@ -424,3 +429,5 @@ table.dataTable td {
     text-align: center; }
   .dataTables_wrapper .dataTables_filter {
     margin-top: 0.5em; } }
+
+    
