--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -14,6 +14,18 @@ body {
   text-align: center;
 }
 
+#btnWelcome {
+  position: relative;
+  right: 215px;
+  bottom: 25px;
+}
+
+#HeaderText {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+
 h5 {
   color: #ff0019;
 }
@@ -225,6 +237,8 @@ select option {
   padding: 2em 3em 2em 3em;
   margin: 0em auto;
   margin-bottom: 3em;
+  /* background: url('../img/card1.png'); */
+  background-size: 700px 380px;
   background-color: #fff;
   border-radius: 4.2px;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
@@ -282,13 +296,6 @@ label {
   margin-top: 65px;
   float: left;
   color: #756e6e;
-}
-
-@media only screen and (max-width: 540px) {
-  .col-half {
-    width: 100%;
-    padding-right: 0;
-  }
 }
 
 #page4lbl {
@@ -429,12 +436,6 @@ input:checked {
   padding-bottom: 30px;
 }
 
-#emailWelcome {
-  position: relative;
-  left: 55px;
-  padding-top: 20px;
-}
-
 #navitem {
   width: 100px;
 }
@@ -458,7 +459,6 @@ input:checked {
   width: 95px;
 }
 
-
 #navbarQ {
   position: relative;
   bottom: 13px;
@@ -473,7 +473,6 @@ input:checked {
   width: 73px;
 }
 
-
 #navbutton {
   display: inline-block;
   padding: 0px;
@@ -484,12 +483,14 @@ input:checked {
   border-radius: 3px;
   color: white;
   font-weight: bold;
-  background-color: #90EE02;
+  background-color: rgba(0, 255, 0, 0.651);
   border-color: rgb(212, 212, 212);
 }
 
+#phone[type=number] {
+  -moz-appearance: textfield;
+}
 
-#phone[type=number] {-moz-appearance: textfield;}
 #phone::-webkit-inner-spin-button,
 #phone::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -509,3 +510,198 @@ input:checked {
   color: #b1b1b1;
 }
 
+#schoolDash {
+  position: relative;
+  bottom: 15px;
+  width: 70px;
+  height: 45px;
+}
+
+#emailWelcomeIn {
+  width: 400px
+}
+
+#emailWelcome {
+  position: relative;
+  left: 55px;
+  padding-top: 20px;
+}
+
+@media only screen and (max-Width:990px) {
+  #navbutton {
+    position: relative;
+    bottom: 0px;
+  }
+
+  #navbarYear{
+    cursor: pointer;
+    position: relative;
+    left: 48px;
+    color:#000;
+    opacity: 0.8;
+    margin-bottom: 8px; 
+  }
+
+  #navbarType{
+    cursor: pointer;
+    position: relative;
+    left: 45px;
+    color:#000;
+    opacity: 0.8;
+    margin-bottom: 8px;
+  }
+  #navbarQ{
+    cursor: pointer;
+    position: relative;
+    left: 30px;
+    color:#000;
+    opacity: 0.8;
+    margin-bottom: 8px;
+  }
+  #navbarM{
+    cursor: pointer;
+    position: relative;
+    left: 30px;
+    color:#000;
+    opacity: 0.8;
+  }
+}
+
+@media only screen and (max-Width:828px) {
+  #logoIn {
+    text-align: center;
+    width: 65%;
+  }
+  .containerRegist {
+    /* width: 70%; */
+    padding: 2em 3em 2em 3em;
+    margin: 0em auto;
+    margin-bottom: 3em;
+    /* background: url('../img/card1.png'); */
+    background-size: 700px 380px;
+    background-color: #fff;
+    border-radius: 4.2px;
+    box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+  }
+  #emailWelcome {
+    position: relative;
+    left: 115px;
+    padding-top: 20px;
+  }
+  #emailWelcomeIn {
+    width: 300px
+  }
+  #btnWelcome {
+    position: relative;
+    right: 175px;
+    bottom: 25px;
+  }
+  #interviewFirst {
+    cursor: pointer;
+    position: relative;
+    right: 90px;
+    width: 320px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+@media only screen and (max-Width:620px) {
+  #btnWelcome {
+    position: relative;
+    right: 125px;
+    bottom: 25px;
+  }
+  #emailWelcome {
+    position: relative;
+    left: 55px;
+    padding-top: 20px;
+  }
+  #interviewFirst {
+    cursor: pointer;
+    position: relative;
+    right: 60px;
+    width: 320px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .containerRegist {
+    width: 120%;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .col-half {
+    width: 100%;
+    padding-right: 0;
+  }
+  .containerRegist {
+    width: 180%;
+  }
+}
+
+@media only screen and (max-Width:464px) {
+  #logoIn {
+    text-align: center;
+    width: 120%;
+  }
+  #btnWelcome {
+    width: 100px;
+    position: relative;
+    right: 55px;
+    bottom: 25px;
+  }
+  #interviewFirst {
+    cursor: pointer;
+    position: relative;
+    right: 140px;
+    width: 320px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  #emailWelcomeIn {
+    width: 255px
+  }
+  #emailWelcome {
+    position: relative;
+    left: -40px;
+    padding-top: 20px;
+  }
+  .containerRegist {
+    padding: 2em 3em 2em 3em;
+    margin: 0em auto;
+    margin-bottom: 3em;
+    /* background: url('../img/card1.png'); */
+    background-size: 700px 380px;
+    background-color: #fff;
+    border-radius: 4.2px;
+    box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .col-half {
+    width: 100%;
+    padding-right: 0;
+  }
+  #emailWelcome {
+    position: relative;
+    left: -72px;
+    padding-top: 20px;
+  }
+  .containerRegist {
+    width: 200%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .col-half {
+    width: 100%;
+    padding-right: 0;
+  }
+  #emailWelcome {
+    position: relative;
+    left: -92px;
+    padding-top: 20px;
+  }
+}
