--- a/src/assets/sass/dashboardEdit.css
+++ b/src/assets/sass/dashboardEdit.css
@@ -1,170 +1,367 @@
  /*     General overwrite     */
-  .sidebar {
-    display: block;
-    width: 260px;
-    display: block;
-    z-index: 1;
-    color: #fff;
-    font-weight: 200;
-    background-size: cover;
-    background-position: center center; }
-    .sidebar .nav {
-      margin-top: 20px; }
-      .sidebar .nav li > a {
-        color: #FFFFFF;
-        margin: 5px 15px;
-        opacity: .86;
-        border-radius: 4px; }
-      .sidebar .nav li:hover > a,
-      .sidebar .nav li.open > a,
-      .sidebar .nav li.open > a:focus,
-      .sidebar .nav li.open > a:hover {
-        /* for active nav */
-        background: rgba(255, 255, 255, 0.13);
-        opacity: 1; }
-      .sidebar .nav li.active > a {
-        color: rgb(255, 255, 255);
-        opacity: 1;
-        background: rgba(0, 255, 0, 0.651); }
 
-    
+ .sidebar {
+   display: block;
+   width: 260px;
+   display: block;
+   z-index: 1;
+   color: #fff;
+   font-weight: 200;
+   background-size: cover;
+   background-position: center center;
+ }
 
-  .sidebar:after, .sidebar:before,
-  body > .navbar-collapse:after,
-  body > .navbar-collapse:before {
-    display: block;
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 2; }
-  
-  .sidebar:before,
-  body > .navbar-collapse:before {
-    opacity: .08;
-    background: #000000; }
-  
-  .sidebar:after,
-  body > .navbar-collapse:after {
-    background: #282828;
-    background: -moz-linear-gradient(top, #282828 0%, #111 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #282828), color-stop(100%, #111));
-    background: -webkit-linear-gradient(top, #282828 0%, #111 100%);
-    background: -o-linear-gradient(top, #282828 0%, #111 100%);
-    background: -ms-linear-gradient(top, #282828 0%, #111 100%);
-    background: linear-gradient(to bottom, #282828 0%, #111 100%);
-    background-size: 150% 150%;
-    z-index: 3;
-    opacity: 1; }
-  
-  .sidebar[data-image]:after, .sidebar.has-image:after,
-  body > .navbar-collapse[data-image]:after,
-  body > .navbar-collapse.has-image:after {
-    opacity: .57; }
-  
+ .sidebar .nav {
+   margin-top: 20px;
+ }
 
-  .main-panel {
-    background-image: url("../img/Tokopedia-SEO.jpg");
-    background-size: cover;
-    background-position: center; 
-    float: right;
-  }
-  
-  .card .ct-chart {
-    margin: 30px 0 30px;
-    height: 325px; }
+ .sidebar .nav li>a {
+   color: #FFFFFF;
+   margin: 5px 15px;
+   opacity: .86;
+   border-radius: 4px;
+ }
 
-    @media only screen and (max-width:1100px){
-      .card .ct-chart {
-        margin: 30px 0 30px;
-        height: 225px; }
-    }
-    @media only screen and (max-width:990px){
-      .card .ct-chart {
-        margin: 30px 0 30px;
-        height: 625px; }
-    }
-    @media only screen and (max-width:750px){
-      .card .ct-chart {
-        margin: 30px 0 30px;
-        height: 425px; }
-    }
-    @media only screen and (max-width:550px){
-      .card .ct-chart {
-        margin: 30px 0 30px;
-        height: 285px; }
-    }
+ .sidebar .nav li:hover>a,
+ .sidebar .nav li.open>a,
+ .sidebar .nav li.open>a:focus,
+ .sidebar .nav li.open>a:hover {
+   /* for active nav */
+   background: rgba(255, 255, 255, 0.13);
+   opacity: 1;
+ }
 
-    .navbar {
-      height: 60px;
-    }
+ .sidebar .nav li.active>a {
+   color: rgb(255, 255, 255);
+   opacity: 1;
+   background: rgba(0, 255, 0, 0.651);
+ }
 
-    button.g-signin2 {
-      position: relative;
-      bottom: 11px;
-      background-color: rgb(255, 255, 255);
-      border-color: rgb(255, 255, 255);
-      border-bottom-color:  rgba(255, 255, 255, 0);
-      border-right-color:  rgba(255, 255, 255, 0); 
-    }
-    .abcRioButtonContentWrapper{
-      background-color: rgb( 60, 186, 84);
-      color: white
-    }
-    .abcRioButtonIcon{
-      background-color: rgb(255, 255, 255)
-      
-    }
+ .sidebar:after,
+ .sidebar:before,
+ body>.navbar-collapse:after,
+ body>.navbar-collapse:before {
+   display: block;
+   content: "";
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   z-index: 2;
+ }
 
-    /* .abcRioButton.abcRioButtonLightBlue{
+ .sidebar:before,
+ body>.navbar-collapse:before {
+   opacity: .08;
+   background: #000000;
+ }
+
+ .sidebar:after,
+ body>.navbar-collapse:after {
+   background: #282828;
+   background: -moz-linear-gradient(top, #282828 0%, #111 100%);
+   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #282828), color-stop(100%, #111));
+   background: -webkit-linear-gradient(top, #282828 0%, #111 100%);
+   background: -o-linear-gradient(top, #282828 0%, #111 100%);
+   background: -ms-linear-gradient(top, #282828 0%, #111 100%);
+   background: linear-gradient(to bottom, #282828 0%, #111 100%);
+   background-size: 150% 150%;
+   z-index: 3;
+   opacity: 1;
+ }
+
+ .sidebar[data-image]:after,
+ .sidebar.has-image:after,
+ body>.navbar-collapse[data-image]:after,
+ body>.navbar-collapse.has-image:after {
+   opacity: .57;
+ }
+
+ .main-panel {
+   background-image: url("../img/sidebar-3.jpg");
+   background-size: cover;
+   background-position: center;
+   float: right;
+ }
+
+ .card .ct-chart {
+   margin: 30px 0 30px;
+   height: 325px;
+ }
+
+ .navbar {
+   height: 60px;
+ }
+
+ button.g-signin2 {
+   position: relative;
+   bottom: 11px;
+   background-color: rgb(255, 255, 255);
+   border-color: rgb(255, 255, 255);
+   border-bottom-color: rgba(255, 255, 255, 0);
+   border-right-color: rgba(255, 255, 255, 0);
+ }
+
+ .abcRioButtonContentWrapper {
+   background-color: rgb( 60, 186, 84);
+   color: white
+ }
+
+ .abcRioButtonIcon {
+   background-color: rgb(255, 255, 255)
+ }
+
+ /* .abcRioButton.abcRioButtonLightBlue{
       height: 29px;
       width: 100px;
     } */
 
-  #inputRecruiter{
-    position: absolute;
-    font-weight: 600;
-    left: 240px;
-    top: 15px;
-    padding-left: 11px;
-    border-left: solid;
-    border-left-color: #e5e5e5;
-    border-left-width: 0.5px;
-    height: 22px;
-  }
-  #inputEmail{
-    padding-top: 10px; 
-    padding-bottom: 30px; 
-    text-align: center
-  }
-  #btnInput{
-    padding: 20px 0px 20px 0px;
-    color: #fff;
-    font-weight: bold;
-    background-color: #7ed321;
-    float: right;
-    width: 100px;
-    margin-top: 45px;
+ #inputRecruiter {
+   position: absolute;
+   font-weight: 600;
+   left: 180px;
+   top: 15px;
+   padding-left: 11px;
+   border-left: solid;
+   border-left-color: #e5e5e5;
+   border-left-width: 0.5px;
+   height: 22px;
+ }
+
+ #iconRecruiter {
+   position: relative;
+   top: -50px;
+ }
+
+ #inputEmail {
+   padding-top: 10px;
+   padding-bottom: 30px;
+   text-align: center
+ }
+
+ #btnInput {
+   padding: 10px 0px 10px 0px;
+   color: #fff;
+   font-weight: bold;
+   background-color: rgba(0, 255, 0, 0.651);
+   float: right;
+   width: 100px;
+   margin-top: 45px;
+   position: relative;
+   right: 200px;
+   bottom: 55px;
+ }
+
+ #btnDelete {
+   padding: 10px 0px 10px 0px;
+   color: #fff;
+   font-weight: bold;
+   background-color: rgba(255, 0, 0, 0.651);
+   float: right;
+   width: 100px;
+   margin-top: 45px;
+   position: relative;
+   right: 100px;
+ }
+
+ .navbar-default {
+   background-color: rgba(255, 255, 255, 0.96);
+   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+ }
+
+ .navbar-default .navbar-nav>li>a:not(.btn) {
+   color: #9A9A9A;
+ }
+
+ .navbar-default .navbar-nav>.active>a,
+ .navbar-default .navbar-nav>.active>a:not(.btn):hover,
+ .navbar-default .navbar-nav>.active>a:not(.btn):focus,
+ .navbar-default .navbar-nav>li>a:not(.btn):hover,
+ .navbar-default .navbar-nav>li>a:not(.btn):focus {
+   background-color: transparent;
+   border-radius: 3px;
+   color: #42b549;
+   opacity: 1;
+   filter: alpha(opacity=100);
+ }
+
+ .navbar-default .navbar-nav>.dropdown>a:hover .caret,
+ .navbar-default .navbar-nav>.dropdown>a:focus .caret {
+   border-bottom-color: #42b549;
+   border-top-color: #42b549;
+ }
+
+ .footer {
+   width: 100%;
+ }
+
+ @media only screen and (max-width:3200px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 765px;
+   }
+ }
+
+ .navRight {
+   width: 495px;
+ }
+
+ @media only screen and (max-width:1600px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 340px;
+   }
+ }
+
+ @media only screen and (max-width:1350px) {
+   .navRight {
+     position: relative;
+     bottom: 80px;
+     width: 510px;
+   }
+   li.nameRight>a {
+     visibility: hidden;
+   }
+   #recruiter{
+    overflow-x: auto;
   }
 
-  .navbar-default {
-    background-color: rgba(255, 255, 255, 0.96);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
-    .navbar-default .navbar-nav > li > a:not(.btn) {
-      color: #9A9A9A; }
-    .navbar-default .navbar-nav > .active > a,
-    .navbar-default .navbar-nav > .active > a:not(.btn):hover,
-    .navbar-default .navbar-nav > .active > a:not(.btn):focus,
-    .navbar-default .navbar-nav > li > a:not(.btn):hover,
-    .navbar-default .navbar-nav > li > a:not(.btn):focus {
-      background-color: transparent;
-      border-radius: 3px;
-      color: #7ed321;
-      opacity: 1;
-      filter: alpha(opacity=100); }
-      .navbar-default .navbar-nav > .dropdown > a:hover .caret,
-      .navbar-default .navbar-nav > .dropdown > a:focus .caret {
-        border-bottom-color: #7ed321;
-        border-top-color: #7ed321; }
+ }
+
+ @media only screen and (max-width:1330px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 365px;
+   }
+   .navRight {
+     position: relative;
+     bottom: 80px;
+     width: 450px;
+   }
+ }
+
+ #emailRecruiter {
+   width: 310px;
+   padding-right: 130px;
+ }
+
+ #nameRecruiter {
+   width: 310px;
+   padding-right: 130px;
+ }
+
+ @media only screen and (max-width:1150px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 225px;
+   }
+   .navRight {
+     position: relative;
+     bottom: 80px;
+     width: 430px;
+   }
+ }
+
+ @media only screen and (max-width:990px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 625px;
+   }
+   .navbar-header {
+     width: 900px;
+   }
+   #btnInput {
+     right: 70%;
+     bottom: 55px;
+   }
+   #btnDelete {
+     right: 80px;
+     bottom: 55px;
+   }
+   #nameRecruiter {
+     width: 310px;
+     padding-right: 130px;
+     margin-left: 20px;
+   }
+   #iconRecruiter {
+     left: 330px;
+   }
+
+ }
+
+ @media only screen and (max-width:900px) {
+   .navbar-header {
+     width: 800px;
+   }
+ }
+
+ @media only screen and (max-width:825px) {
+   .navbar-header {
+     width: 750px;
+   }
+ }
+
+ @media only screen and (max-width:750px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 425px;
+   }
+   .navbar-header {
+     width: 650px;
+   }
+   #btnInput {
+     position: absolute;
+     bottom: -10px;
+     left: 110px;
+   }
+   #btnDelete {
+     position: absolute;
+     bottom: -10px;
+     left: 310px;
+   }
+   #nameRecruiter {
+     width: 310px;
+     padding-right: 130px;
+     margin-left: 20px;
+     position: absolute;
+     left: 310px;
+   }
+   #iconRecruiter {
+     left: 330px;
+   }
+ }
+
+ @media only screen and (max-width:660px) {
+   .navbar-header {
+     width: 550px;
+   }
+ }
+
+ @media only screen and (max-width:550px) {
+   .card .ct-chart {
+     margin: 30px 0 30px;
+     height: 285px;
+   }
+   .navbar-header {
+     width: 450px;
+   }
+ }
+
+ @media only screen and (max-width:453px) {
+   .navbar-header {
+     width: 350px;
+   }
+ }
+
+ @media only screen and (max-width:441px) {
+   .navbar-header {
+     width: 350px;
+   }
+ }
+
+ @media only screen and (max-width:320px) {
+   .navbar-header {
+     width: 290px;
+   }
+ }
