excel and csv file

--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -48,7 +48,7 @@ table.dataTable tbody tr {
   background-color: white; }
 
 table.dataTable tbody tr.selected {
-  background-color: #76FF03; }
+  background-color: #76FF03 !important; }
 
 table.dataTable tbody th,
 table.dataTable tbody td {
