make input button

--- a/src/assets/sass/dashboardEdit.css
+++ b/src/assets/sass/dashboardEdit.css
@@ -1,16 +1,17 @@
  /*     General overwrite     */
 
- .REJECTcolor{
-  background-color: rgba(184, 10, 10, 0.377)!important;
-}
+ .REJECTcolor {
+   background-color: rgba(184, 10, 10, 0.377) !important;
+ }
 
-.APPROVEDcolor{
-  background-color: rgba(0, 255, 76, 0.397)!important;
-}
+ .APPROVEDcolor {
+   background-color: rgba(0, 255, 76, 0.397) !important;
+ }
 
-.PROGRESScolor{
-  background-color: rgba(0, 238, 255, 0.397)!important;
-}
+ .PROGRESScolor {
+   background-color: rgba(0, 238, 255, 0.397) !important;
+ }
+
  .sidebar {
    display: block;
    width: 260px;
@@ -174,7 +175,7 @@
    margin-top: 45px;
    position: relative;
    right: 100px;
-   bottom:64px;
+   bottom: 64px;
  }
 
  .navbar-default {
@@ -208,21 +209,22 @@
    width: 100%;
  }
 
- #modalBtn{
+ #modalBtn {
    background-color: rgba(255, 0, 0, 0.651)
  }
- #modalBtn:hover{
-  background-color: transparent
-   
+
+ #modalBtn:hover {
+   background-color: transparent
  }
+
  .modal-container {
-  position: relative;
-}
-.modal-container .modal, .modal-container .modal-backdrop {
-  position: absolute;
-}
+   position: relative;
+ }
 
-
+ .modal-container .modal,
+ .modal-container .modal-backdrop {
+   position: absolute;
+ }
 
  @media only screen and (max-width:3200px) {
    .card .ct-chart {
@@ -251,10 +253,9 @@
    li.nameRight>a {
      visibility: hidden;
    }
-   #recruiter{
-    overflow-x: auto;
-  }
-
+   #recruiter {
+     overflow-x: auto;
+   }
  }
 
  @media only screen and (max-width:1330px) {
@@ -315,25 +316,31 @@
    #iconRecruiter {
      left: 330px;
    }
-
  }
 
- .csvButton{
-  width: 60px;
-  height: 30px;
-  border-radius: 4px;
-  color: white;
-  font-weight: bold;
-  background-color: rgba(0, 255, 0, 0.651);
-  border-color: rgb(212, 212, 212);
-  margin-bottom: 20px;
-  /* position: relative; */
-  /* top:595px; */
- }
- .csvButton:hover{
+ /* .csvButton {
+   width: 60px;
+   height: 30px;
+   border-radius: 4px;
+   color: white;
+   font-weight: bold;
+   background-color: rgba(0, 255, 0, 0.651);
+   border-color: rgb(212, 212, 212);
+   margin-bottom: 20px;
+   position: relative;
+   top:595px; 
+ } */
+
+  /* .csvButton{
+    position: relative;
+    top: 100px !important;
+  } */
+
+
+ /* .csvButton:hover {
    background-color: transparent;
    color: rgb(212, 212, 212);
- }
+ } */
 
  /* .RcsvButton{
   width: 60px;
@@ -342,17 +349,21 @@
   color: white;
   font-weight: bold;
   background-color: rgba(0, 255, 0, 0.651);
-  border-color: rgb(212, 212, 212);
+  border-color: rgb(212, 212, 212) ;
   margin-bottom: 20px;
   position: relative;
   top:765px;
   left: 40%;
- }
- .RcsvButton:hover{
-
-  color: rgba(0, 255, 0, 0.651);   
  } */
 
+ .RcsvButton:hover{
+
+  color: rgba(2, 128, 2, 0.952);   
+ }
+
+ /* .dt-buttons {
+   
+ } */
 
  @media only screen and (max-width:900px) {
    .navbar-header {
@@ -382,7 +393,7 @@
    #btnDelete {
      position: absolute;
      bottom: 15px;
-     left:75%;
+     left: 75%;
    }
    #nameRecruiter {
      width: 310px;
@@ -400,15 +411,15 @@
    .navbar-header {
      width: 550px;
    }
-   .csvButton{
-    position: relative;
-    top:0;
-    left: 30%;
+   .csvButton {
+     position: relative;
+     top: 0;
+     left: 30%;
    }
-   .RcsvButton{
-    position: relative;
-    top:0;
-    left: 30%;
+   .RcsvButton {
+     position: relative;
+     top: 0;
+     left: 30%;
    }
  }
 
@@ -433,10 +444,10 @@
      width: 350px;
    }
    #btnDelete {
-    position: absolute;
-    bottom: -8px;
-    left:35%;
-  }
+     position: absolute;
+     bottom: -8px;
+     left: 35%;
+   }
  }
 
  @media only screen and (max-width:320px) {
