--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -413,7 +413,7 @@ table.dataTable td {
 
   #big-col{
     background-color: #FFFFFF;
-    width: 140px !important;
+    width: 160px !important;
     text-align: center;
   }
   #id-col{
@@ -421,6 +421,23 @@ table.dataTable td {
   }
   #big-table{
     table-Layout: fixed;
+    text-align: center;
+  }
+
+  #opsTableProgressBtn{
+    width: 130px;
+  }
+
+  .RcsvButton{
+    position: relative;
+    top: 4px !important;
+  }
+  
+  #nonTableProgressBtn{
+    width: 195px;
+  }
+
+  #progressTable{
     text-align: center;
   }
 
