--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -7,12 +7,7 @@ table.dataTable {
   clear: both;
   border-collapse: separate;
   border-spacing: 0;
-  /*
-     * Header and footer styles
-     */
-  /*
-     * Body styles
-     */ }
+ }
 
 
 
