make notif for ops and nonops table

--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -9,7 +9,10 @@ table.dataTable {
   border-spacing: 0;
  }
 
-
+.notif{
+  opacity: 0.85;
+  font-size: 15px;
+}
 
 table.dataTable thead th,
 table.dataTable tfoot th {
