fix excel export progress column

--- a/src/assets/css/datatable.css
+++ b/src/assets/css/datatable.css
@@ -1,7 +1,7 @@
 /*
  * Table styles
  */
-table.dataTable {
+ table.dataTable {
   width: 100%;
   margin: 0 auto;
   clear: both;
@@ -9,7 +9,10 @@ table.dataTable {
   border-spacing: 0;
  }
 
-
+.notif{
+  opacity: 0.85;
+  font-size: 15px;
+}
 
 table.dataTable thead th,
 table.dataTable tfoot th {
@@ -413,6 +416,11 @@ table.dataTable td {
   }
   #id-col{
     background-color: #FFFFFF;
+  }
+  #email-col{
+    background-color: #FFFFFF;
+    width: 190px !important;
+    text-align: center;
   }
   #big-table{
     table-Layout: fixed;
