fix style and login

--- a/src/assets/sass/lbd/_misc.scss
+++ b/src/assets/sass/lbd/_misc.scss
@@ -3,7 +3,7 @@ body,
 .wrapper{
     min-height: 100vh;
     position: relative;
-    background-color: white;
+    background-color: transparent;
 }
 a{
   color: $info-color;
