--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,14 +4,16 @@
   box-sizing: border-box;
 }
 
-body {
-  background-image: url("../img/Tokopedia-SEO.jpg");
-  background-size: cover;
+html{
+  background-image: url("../img/Tokopedia-Regist.jpg");
   background-position: center;
 }
 
-#logo1 {
-  text-align: center;
+
+#logo1 {  
+    text-align: center;
+    width: 560px;
+    margin: 0 auto;
 }
 
 #btnWelcome {
@@ -84,7 +86,6 @@ select {
   display: inline-block;
   width: 50%;
   text-align: center;
-  float: left;
   border-radius: 0;
 }
 
@@ -249,6 +250,12 @@ select option {
   display: table;
 }
 
+.container {
+  overflow: hidden;
+  width: 700px;
+  padding-left: 0;
+}
+
 .row:after {
   clear: both;
 }
@@ -407,6 +414,12 @@ label {
   padding-bottom: 20px;
 }
 
+.regist-button{
+  position: relative;
+  right: 320px;
+  width: 820px;
+}
+
 #interview {
   position: relative;
   left: 150px;
@@ -439,6 +452,11 @@ label {
   bottom: 13px;
   font-size: 13.5px;
   width: 95px;
+}
+
+.containerRegist-wrapper {
+  margin: auto;
+  width: 700px;
 }
 
 #navbarQ {
@@ -500,15 +518,33 @@ label {
 }
 
 #emailWelcomeIn {
-  width: 400px
+  width: 442px
 }
 
 #emailWelcome {
   position: relative;
-  left: 55px;
   padding-top: 20px;
 }
 
+.icon-email {
+  width: 442px;
+  margin: 0 auto;
+}
+
+#main-email{
+  position: relative;
+  left: 0;
+  margin: 0 auto;
+  -ms-flex-pack: center;
+  justify-content: center;
+
+}
+
+@media only screen and (min-Width:990px) {
+  #logo1 {
+  margin-left: 75px;
+  }
+}
 @media only screen and (max-Width:990px) {
   #navbutton {
     position: relative;
@@ -550,10 +586,6 @@ label {
 }
 
 @media only screen and (max-Width:828px) {
-  #logoIn {
-    text-align: center;
-    width: 65%;
-  }
   .containerRegist {
     padding: 2em 3em 2em 3em;
     margin: 0em auto;
@@ -565,21 +597,17 @@ label {
   }
   #emailWelcome {
     position: relative;
-    left: 115px;
     padding-top: 20px;
   }
-  #emailWelcomeIn {
-    width: 300px
-  }
+
   #btnWelcome {
     position: relative;
-    right: 175px;
+    right: 215px;
     bottom: 25px;
   }
   #interviewFirst {
     cursor: pointer;
     position: relative;
-    right: 90px;
     width: 320px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -589,18 +617,15 @@ label {
 @media only screen and (max-Width:620px) {
   #btnWelcome {
     position: relative;
-    right: 125px;
     bottom: 25px;
   }
   #emailWelcome {
     position: relative;
-    left: 55px;
     padding-top: 20px;
   }
   #interviewFirst {
     cursor: pointer;
     position: relative;
-    right: 60px;
     width: 320px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -621,10 +646,6 @@ label {
 }
 
 @media only screen and (max-Width:464px) {
-  #logoIn {
-    text-align: center;
-    width: 120%;
-  }
   #btnWelcome {
     width: 100px;
     position: relative;
@@ -634,17 +655,13 @@ label {
   #interviewFirst {
     cursor: pointer;
     position: relative;
-    right: 140px;
     width: 320px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
-  #emailWelcomeIn {
-    width: 255px
-  }
+
   #emailWelcome {
     position: relative;
-    left: -40px;
     padding-top: 20px;
   }
   .containerRegist {
@@ -665,7 +682,6 @@ label {
   }
   #emailWelcome {
     position: relative;
-    left: -72px;
     padding-top: 20px;
   }
   .containerRegist {
@@ -680,7 +696,6 @@ label {
   }
   #emailWelcome {
     position: relative;
-    left: -92px;
     padding-top: 20px;
   }
 }
