--- a/src/assets/sass/light-bootstrap-dashboard.css
+++ b/src/assets/sass/light-bootstrap-dashboard.css
@@ -127,7 +127,7 @@ body,
 .wrapper {
   min-height: 100vh;
   position: relative;
-  background-color: white; }
+  background-color: transparent; }
 
 a {
   color: #1DC7EA; }
@@ -1377,7 +1377,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   .navbar .btn-simple {
     font-size: 16px; }
   .navbar.fixed {
-    width: calc(100% - $sidebar-width);
+    width: calc(100% - sidebar-width);
     right: 0;
     left: auto;
     border-radius: 0; }
